--- a/package.json
+++ b/package.json
@@ -1,32 +1,40 @@
 {
-  "name": "hp_hogwarts_directory",
+  "name": "spellwell",
   "version": "1.0.0",
-  "description": "Spelling App",
-  "main": "app.js",
+  "description": "Spelling Application",
+  "main": "server.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": " nodemon app.js"
+    "start": "nodemon server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "InstincDev",
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.0.1",
-    "connect-mongo": "^4.6.0",
-    "dotenv": "^16.0.1",
-    "ejs": "^3.1.8",
-    "express": "^4.18.1",
-    "express-ejs-layouts": "^2.5.1",
+    "cloudinary": "^1.25.1",
+    "connect-mongo": "^3.2.0",
+    "dotenv": "^8.2.0",
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
     "express-flash": "^0.0.2",
-    "express-session": "^1.17.3",
+    "express-session": "^1.17.1",
     "method-override": "^3.0.0",
-    "moment": "^2.29.4",
-    "mongodb": "^4.9.1",
-    "mongoose": "^6.5.1",
+    "mongodb": "^3.6.5",
+    "mongoose": "^5.12.3",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^2.0.7",
     "passport": "^0.6.0",
-    "validator": "^13.7.0"
+    "passport-local": "^1.0.0",
+    "validator": "^13.6.0"
   },
-  "devDependencies": {
-    "nodemon": "^2.0.19"
-  }
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/InstincDev/spellwell.git"
+  },
+  "bugs": {
+    "url": "https://github.com/InstincDev/spellwell/issues"
+  },
+  "homepage": "https://github.com/InstincDev/spellwell#readme"
 }
